--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,12 @@
     "description": "A web interface to edit HPA configuration",
     "main": "app.js",
     "scripts": {
-      "start": "node app.js"
+        "start": "node app.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "body-parser": "^1.19.0",
-      "yaml": "^1.10.2"
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "yaml": "^1.10.2"
     }
-  }
-  
+}
